# Tetris-Rs

./: Cargo.toml  build.rs  main1.rs  main2.rs  template.html
.src/: main.rs
raylib/: Cargo.toml  build.rs
raylib/src/: builder.rs  drawing.rs  input.rs  lib.rs  raylib.rs  shapes.rs  time.rs  window.rs
raylib_c/include/: raymath.h  wrapper.h
src/: .save  main.rs
src/tetris/: matrix.rs  mod.rs  next_queue.rs  player.rs  tetris.rs  tetromino.rs  util.rs
src/tetris/engine/: mod.rs  positions.rs  shapes.rs  vectors.rs
src/tetris/raylib/: builder.rs  drawing.rs  input.rs  mod.rs  raylib.rs  shapes.rs  time.rs  window.rs
tetris/: Cargo.toml
tetris/.src/: main.rs
tetris/.src/tetris/: graphics.rs  matrix.rs  mod.rs  next_queue.rs  player.rs  tetris.rs  tetromino.rs
tetris/src/: main.rs
